--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,31 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My ERP</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f2f5;
-        }
-        #app {
-            text-align: center;
-            padding: 20px;
-            border-radius: 8px;
-            background: white;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        h1 {
-            color: #333;
-        }
-    </style>
+    <link rel="stylesheet" href="/path/to/styles.css">
 </head>
 <body>
-    <div id="app"></div>
-    <script src="/path/to/your/bundle.js"></script> <!-- Ganti dengan path ke file JavaScript yang dihasilkan -->
+    <div id="app">
+        <nav>
+            <ul>
+                <li><a href="/dashboard">Dashboard</a></li>
+                <li><a href="/users">User Management</a></li>
+                <li><a href="/admin/register">Admin Registration</a></li>
+                <li><a href="/settings">Settings</a></li>
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </nav>
+        <main>
+            <h1>Welcome to My ERP</h1>
+            <button onclick="location.href='/users/new'">Tambah Pengguna Baru</button>
+            <button onclick="location.href='/reports'">Lihat Laporan</button>
+            <!-- Area untuk notifikasi -->
+            <div id="notifications"></div>
+        </main>
+    </div>
+    <script src="/path/to/your/bundle.js"></script>
 </body>
 </html>
